create: home-title and featured-products blocks

--- a/home.html
+++ b/home.html
@@ -8,6 +8,8 @@
   <title>heat-map-test</title>
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <link href="css/style.css.map" rel="stylesheet" type="text/css">
+  <!-- swiper -->
+  <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
   <!-- fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
@@ -87,6 +89,99 @@
       </div>
     </div>
   </header>
+  <section class="home-title">
+    <img src="/imgs/lamp.svg" alt="" class="home-title__lamp">
+    <img src="/imgs/sofa.svg" alt="" class="home-title__sofa">
+    <img src="/imgs/sale.svg" alt="" class="home-title__sale">
+    <div class="container home-title__container">
+      <div class="home-title__pre-title">Best Furniture For Your Castle....</div>
+      <h1 class="home-title__title">New Furniture Collection
+        Trends in 2020</h1>
+      <div class="home-title__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Magna in est
+        adipiscing
+        in phasellus non in justo.</div>
+      <button class="home-title__button">Shop Now</button>
+    </div>
+  </section>
+  <section class="featured-products">
+    <div class="container featured-products__container">
+      <h3 class="title featured-products__title">Featured Products</h3>
+      <div class="featured-products__slider">
+        <!-- Slider main container -->
+        <div class="swiper">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide">
+              <div class="swiper-slide__image">
+                <img src="/imgs/chair-1.svg" alt="Chair" class="">
+              </div>
+              <div class="swiper-slide__description">
+                <h6 class="swiper-slide__title">Cantilever chair</h6>
+                <div class="swiper-slide__colors">
+                  <div class="swiper-slide__color swiper-slide__colors--green"></div>
+                  <div class="swiper-slide__color swiper-slide__colors--pink"></div>
+                  <div class="swiper-slide__color swiper-slide__colors--blue"></div>
+                </div>
+                <div class="swiper-slide__code">Code - Y523201</div>
+                <div class="swiper-slide__price">$42.00</div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="swiper-slide__image">
+                <img src="/imgs/chair-2.svg" alt="Chair" class="">
+              </div>
+              <div class="swiper-slide__description">
+                <h6 class="swiper-slide__title">Cantilever chair</h6>
+                <div class="swiper-slide__colors">
+                  <div class="swiper-slide__color swiper-slide__colors--green"></div>
+                  <div class="swiper-slide__color swiper-slide__colors--pink"></div>
+                  <div class="swiper-slide__color swiper-slide__colors--blue"></div>
+                </div>
+                <div class="swiper-slide__code">Code - Y523201</div>
+                <div class="swiper-slide__price">$42.00</div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="swiper-slide__image">
+                <img src="/imgs/chair-3.svg" alt="Chair" class="">
+              </div>
+              <div class="swiper-slide__description">
+                <h6 class="swiper-slide__title">Cantilever chair</h6>
+                <div class="swiper-slide__colors">
+                  <div class="swiper-slide__color swiper-slide__colors--green"></div>
+                  <div class="swiper-slide__color swiper-slide__colors--pink"></div>
+                  <div class="swiper-slide__color swiper-slide__colors--blue"></div>
+                </div>
+                <div class="swiper-slide__code">Code - Y523201</div>
+                <div class="swiper-slide__price">$42.00</div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="swiper-slide__image">
+                <img src="/imgs/chair-4.svg" alt="Chair" class="">
+              </div>
+              <div class="swiper-slide__description">
+                <h6 class="swiper-slide__title">Cantilever chair</h6>
+                <div class="swiper-slide__colors">
+                  <div class="swiper-slide__color swiper-slide__colors--green"></div>
+                  <div class="swiper-slide__color swiper-slide__colors--pink"></div>
+                  <div class="swiper-slide__color swiper-slide__colors--blue"></div>
+                </div>
+                <div class="swiper-slide__code">Code - Y523201</div>
+                <div class="swiper-slide__price">$42.00</div>
+              </div>
+            </div>
+          </div>
+          <!-- If we need pagination -->
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- swiper -->
+  <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
