create: leatest-products block

--- a/home.html
+++ b/home.html
@@ -179,6 +179,97 @@
       </div>
     </div>
   </section>
+  <section class="leatest-products">
+    <div class="container leatest-products__container">
+      <h3 class="title leatest-products__title">Leatest Products</h3>
+      <ul class="leatest-products__filter">
+        <li class="leatest-products__new">New Arrival</li>
+        <li class="leatest-products__best">Best Seller</li>
+        <li class="leatest-products__featured">Featured</li>
+        <li class="leatest-products__special">Special Offer</li>
+      </ul>
+      <div class="leatest-products__grid">
+        <div class="leatest-products__card">
+          <div class="leatest-products__card-image">
+            <img src="/imgs/sofa-1.svg" alt="Chair" class="">
+          </div>
+          <div class="leatest-products__card-down">
+            <div class="leatest-products__line"></div>
+            <span class="leatest-products__card-name">Comfort Handy Craft</span>
+            <div class="leatest-products__prices">
+              <span class="leatest-products__card-price">$42.00</span>
+              <span class="leatest-products__card-price leatest-products__card-price--old">$65.00</span>
+            </div>
+          </div>
+        </div>
+        <div class="leatest-products__card">
+          <div class="leatest-products__card-image" style="background: none">
+            <img src="/imgs/sofa-2.svg" alt="Sofa" class="">
+          </div>
+          <div class="leatest-products__card-down">
+            <div class="leatest-products__line"></div>
+            <span class="leatest-products__card-name">Comfort Handy Craft</span>
+            <div class="leatest-products__prices">
+              <span class="leatest-products__card-price">$42.00</span>
+              <span class="leatest-products__card-price leatest-products__card-price--old">$65.00</span>
+            </div>
+          </div>
+        </div>
+        <div class="leatest-products__card">
+          <div class="leatest-products__card-image">
+            <img src="/imgs/sofa-3.svg" alt="Sofa" class="">
+          </div>
+          <div class="leatest-products__card-down">
+            <div class="leatest-products__line"></div>
+            <span class="leatest-products__card-name">Comfort Handy Craft</span>
+            <div class="leatest-products__prices">
+              <span class="leatest-products__card-price">$42.00</span>
+              <span class="leatest-products__card-price leatest-products__card-price--old">$65.00</span>
+            </div>
+          </div>
+        </div>
+        <div class="leatest-products__card">
+          <div class="leatest-products__card-image">
+            <img src="/imgs/sofa-4.svg" alt="Sofa" class="">
+          </div>
+          <div class="leatest-products__card-down">
+            <div class="leatest-products__line"></div>
+            <span class="leatest-products__card-name">Comfort Handy Craft</span>
+            <div class="leatest-products__prices">
+              <span class="leatest-products__card-price">$42.00</span>
+              <span class="leatest-products__card-price leatest-products__card-price--old">$65.00</span>
+            </div>
+          </div>
+        </div>
+        <div class="leatest-products__card">
+          <div class="leatest-products__card-image">
+            <img src="/imgs/sofa-5.svg" alt="Sofa" class="">
+          </div>
+          <div class="leatest-products__card-down">
+            <span class="leatest-products__card-name">Comfort Handy Craft</span>
+            <div class="leatest-products__line"></div>
+            <div class="leatest-products__prices">
+              <span class="leatest-products__card-price">$42.00</span>
+              <span class="leatest-products__card-price leatest-products__card-price--old">$65.00</span>
+            </div>
+          </div>
+        </div>
+        <div class="leatest-products__card">
+          <div class="leatest-products__card-image">
+            <img src="/imgs/sofa-6.svg" alt="Sofa" class="">
+          </div>
+          <div class="leatest-products__card-down">
+            <div class="leatest-products__line"></div>
+            <span class="leatest-products__card-name">Comfort Handy Craft</span>
+            <div class="leatest-products__prices">
+              <span class="leatest-products__card-price">$42.00</span>
+              <span class="leatest-products__card-price leatest-products__card-price--old">$65.00</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- swiper -->
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
