--- a/home.html
+++ b/home.html
@@ -270,6 +270,44 @@
       </div>
     </div>
   </section>
+  <section class="offer">
+    <div class="container offer__container">
+      <h3 class="title offer__title">What Shopex Offer!</h3>
+      <div class="offer__cards">
+        <div class="offer__card">
+          <div class="offer__card-image">
+            <img src="/imgs/free-delivery.svg" alt="">
+          </div>
+          <div class="offer__card-title">24/7 Support</div>
+          <div class="offer__card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa purus
+            gravida.</div>
+        </div>
+        <div class="offer__card">
+          <div class="offer__card-image">
+            <img src="/imgs/cashback.svg" alt="">
+          </div>
+          <div class="offer__card-title">24/7 Support</div>
+          <div class="offer__card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa purus
+            gravida.</div>
+        </div>
+        <div class="offer__card">
+          <div class="offer__card-image">
+            <img src="/imgs/premium-quality.svg" alt="">
+          </div>
+          <div class="offer__card-title">24/7 Support</div>
+          <div class="offer__card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa purus
+            gravida.</div>
+        </div>
+        <div class="offer__card">
+          <div class="offer__card-image">
+            <img src="/imgs/24-hours-support.svg" alt="">
+          </div>
+          <div class="offer__card-title">24/7 Support</div>
+          <div class="offer__card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa purus
+            gravida.</div>
+        </div>
+      </div>
+  </section>
   <!-- swiper -->
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
