--- a/home.html
+++ b/home.html
@@ -91,7 +91,7 @@
   </header>
   <section class="home-title">
     <img src="/imgs/lamp.svg" alt="" class="home-title__lamp">
-    <img src="/imgs/sofa.svg" alt="" class="home-title__sofa">
+    <img src="/imgs/sofa-header.png" alt="" class="home-title__sofa">
     <img src="/imgs/sale.svg" alt="" class="home-title__sale">
     <div class="container home-title__container">
       <div class="home-title__pre-title">Best Furniture For Your Castle....</div>
@@ -307,6 +307,33 @@
             gravida.</div>
         </div>
       </div>
+  </section>
+  <section class="unique-features">
+    <div class="container unique-features__container">
+      <div class="unique-features__img">
+        <img src="/imgs/sofa-unique.png" alt="">
+      </div>
+      <div class="unique-features__content">
+        <div class="unique-features__title title">Unique Features Of leatest &
+          Trending Poducts</div>
+        <ul class="unique-features__list">
+          <li class="unique-features__li unique-features__li--first">All frames constructed with hardwood solids and
+            laminates</li>
+          <li class="unique-features__li unique-features__li--second">Reinforced with double wood dowels, glue, screw -
+            nails corner
+            blocks and machine nails</li>
+          <li class="unique-features__li unique-features__li--third">Arms, backs and seats are structurally reinforced
+          </li>
+        </ul>
+        <div class="unique-features__button-block">
+          <button class="unique-features__button">Add to cart</button>
+          <div class="unique-features__description">
+            <span class="unique-features__name">B&B Italian Sofa</span>
+            <span class="unique-features__price">$32.00</span>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
   <!-- swiper -->
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
