--- a/home.html
+++ b/home.html
@@ -335,6 +335,102 @@
       </div>
     </div>
   </section>
+  <section class="trending-products">
+    <div class="container trending-products__container">
+      <div class="trending-products__title title">Trending Products</div>
+      <div class="trending-products__up">
+        <div class="trending-products__chair">
+          <div class="trending-products__chair-image">
+            <img src="/imgs/trend-chair-1.png" alt="" class="">
+          </div>
+          <div class="trending-products__name">Cantilever chair</div>
+          <div class="trending-products__price">
+            <span class="trending-products__price--new">$26.00</span>
+            <span class="trending-products__price--old">$42.00</span>
+          </div>
+        </div>
+        <div class="trending-products__chair">
+          <div class="trending-products__chair-image">
+            <img src="/imgs/trend-chair-2.png" alt="" class="">
+          </div>
+          <div class="trending-products__name">Cantilever chair</div>
+          <div class="trending-products__price">
+            <span class="trending-products__price--new">$26.00</span>
+            <span class="trending-products__price--old">$42.00</span>
+          </div>
+        </div>
+        <div class="trending-products__chair">
+          <div class="trending-products__chair-image">
+            <img src="/imgs/trend-chair-3.png" alt="" class="">
+          </div>
+          <div class="trending-products__name">Cantilever chair</div>
+          <div class="trending-products__price">
+            <span class="trending-products__price--new">$26.00</span>
+            <span class="trending-products__price--old">$42.00</span>
+          </div>
+        </div>
+        <div class="trending-products__chair">
+          <div class="trending-products__chair-image">
+            <img src="/imgs/trend-chair-4.png" alt="" class="">
+          </div>
+          <div class="trending-products__name">Cantilever chair</div>
+          <div class="trending-products__price">
+            <span class="trending-products__price--new">$26.00</span>
+            <span class="trending-products__price--old">$42.00</span>
+          </div>
+        </div>
+      </div>
+      <div class="trending-products__down">
+        <div class="trending-products__sale-first">
+          <div class="trending-products__subtitle">23% off in all products</div>
+          <div class="trending-products__sale-down">
+            <a class="trending-products__shop">Shop Now</a>
+            <div class="trending-products__img">
+              <img src="/imgs/clock.png" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="trending-products__sale-second">
+          <div class="trending-products__subtitle">23% off in all products</div>
+          <div class="trending-products__sale-down">
+            <a class="trending-products__shop">View Collection</a>
+            <div class="trending-products__img">
+              <img src="/imgs/wardrobe.png" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="trending-products__list">
+          <div class="trending-products__li">
+            <div class="trending-products__chair-image trending-products__chair-image--down">
+              <img src="/imgs/trend-chair-5.png" alt="" class="">
+            </div>
+            <div class="trending-products__li--right">
+              <div class="trending-products__name trending-products__name--right">Executive Seat chair</div>
+              <span class="trending-products__price--old trending-products__price--down">$32.00</span>
+            </div>
+          </div>
+          <div class="trending-products__li">
+            <div class="trending-products__chair-image trending-products__chair-image--down">
+              <img src="/imgs/trend-chair-6.png" alt="" class="">
+            </div>
+            <div class="trending-products__li--right">
+              <div class="trending-products__name trending-products__name--right">Executive Seat chair</div>
+              <span class="trending-products__price--old trending-products__price--down">$32.00</span>
+            </div>
+          </div>
+          <div class="trending-products__li">
+            <div class="trending-products__chair-image trending-products__chair-image--down">
+              <img src="/imgs/trend-chair-7.png" alt="" class="">
+            </div>
+            <div class="trending-products__li--right">
+              <div class="trending-products__name trending-products__name--right">Executive Seat chair</div>
+              <span class="trending-products__price--old trending-products__price--down">$32.00</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- swiper -->
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
