create: discount-item block

--- a/home.html
+++ b/home.html
@@ -314,8 +314,8 @@
         <img src="/imgs/sofa-unique.png" alt="">
       </div>
       <div class="unique-features__content">
-        <div class="unique-features__title title">Unique Features Of leatest &
-          Trending Poducts</div>
+        <h3 class="unique-features__title title">Unique Features Of leatest &
+          Trending Poducts</h3>
         <ul class="unique-features__list">
           <li class="unique-features__li unique-features__li--first">All frames constructed with hardwood solids and
             laminates</li>
@@ -337,7 +337,7 @@
   </section>
   <section class="trending-products">
     <div class="container trending-products__container">
-      <div class="trending-products__title title">Trending Products</div>
+      <h3 class="trending-products__title title">Trending Products</h3>
       <div class="trending-products__up">
         <div class="trending-products__chair">
           <div class="trending-products__chair-image">
@@ -427,6 +427,35 @@
               <span class="trending-products__price--old trending-products__price--down">$32.00</span>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="discount-item">
+    <div class="container discount-item__container">
+      <h3 class="discount-item__title title">Discount Item</h3>
+      <ul class="leatest-products__filter discount-item__filter">
+        <li class="leatest-products__new discount-item__dot">Wood Chair</li>
+        <li class="leatest-products__best discount-item__margin">Plastic Chair</li>
+        <li class="leatest-products__special">Sofa Colletion</li>
+      </ul>
+      <div class="discount-item__content">
+        <div class="discount-item__description">
+          <div class="discount-item__name">20% Discount Of All Products</div>
+          <div class="discount-item__subname">Eams Sofa Compact</div>
+          <div class="home-title__description discount-item__desc">Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Eu eget
+            feugiat habitasse nec, bibendum condimentum.</div>
+          <div class="discount-item__list">
+            <div class="discount-item__li">Material expose like metals</div>
+            <div class="discount-item__li">Clear lines and geomatric figures</div>
+            <div class="discount-item__li">Simple neutral colours.</div>
+            <div class="discount-item__li">Material expose like metals</div>
+          </div>
+          <div class="home-title__button discount-item__button">Shop Now</div>
+        </div>
+        <div class="discount-item__image">
+          <img src="/imgs/discount-sofa.png" alt="">
         </div>
       </div>
     </div>
