create: top-categories block

--- a/home.html
+++ b/home.html
@@ -460,6 +460,57 @@
       </div>
     </div>
   </section>
+  <section class="top">
+    <div class="container top__container">
+      <h3 class="top__title title">Top Categories</h3>
+      <!-- Slider main container -->
+      <!-- Slider main container -->
+      <div class="swiper">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+          <!-- Slides -->
+          <div class="swiper-slide swiper-slide--top">
+            <div class="swiper-slide__image swiper-slide__image--top">
+              <img src="/imgs/top-chair-1.png" alt="Chair" class="">
+            </div>
+            <div class="swiper-slide__description">
+              <h6 class="swiper-slide__title swiper-slide__title--top">Mini LCW Chair</h6>
+              <div class="swiper-slide__price swiper-slide__price--top">$56.00</div>
+            </div>
+          </div>
+          <div class="swiper-slide swiper-slide--top">
+            <div class="swiper-slide__image swiper-slide__image--top">
+              <img src="/imgs/top-chair-2.png" alt="Chair" class="">
+            </div>
+            <div class="swiper-slide__description">
+              <h6 class="swiper-slide__title swiper-slide__title--top">Mini LCW Chair</h6>
+              <div class="swiper-slide__price swiper-slide__price--top">$56.00</div>
+            </div>
+          </div>
+          <div class="swiper-slide swiper-slide--top">
+            <div class="swiper-slide__image swiper-slide__image--top">
+              <img src="/imgs/top-chair-3.png" alt="Chair" class="">
+            </div>
+            <div class="swiper-slide__description">
+              <h6 class="swiper-slide__title swiper-slide__title--top">Mini LCW Chair</h6>
+              <div class="swiper-slide__price swiper-slide__price--top">$56.00</div>
+            </div>
+          </div>
+          <div class="swiper-slide swiper-slide--top">
+            <div class="swiper-slide__image swiper-slide__image--top">
+              <img src="/imgs/top-chair-4.png" alt="Chair" class="">
+            </div>
+            <div class="swiper-slide__description">
+              <h6 class="swiper-slide__title swiper-slide__title--top">Mini LCW Chair</h6>
+              <div class="swiper-slide__price swiper-slide__price--top">$56.00</div>
+            </div>
+          </div>
+        </div>
+        <!-- If we need pagination -->
+        <div class="swiper-pagination swiper-pagination--top"></div>
+      </div>
+    </div>
+  </section>
   <!-- swiper -->
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
