create: subscribe block

--- a/home.html
+++ b/home.html
@@ -511,6 +511,13 @@
       </div>
     </div>
   </section>
+  <section class="subscribe">
+    <div class="container subscribe__container">
+      <div class="subscribe__title">Get Leatest Update By Subscribe
+        0ur Newslater</div>
+      <button class="home-title__button subscribe__button">Shop Now</button>
+    </div>
+  </section>
   <!-- swiper -->
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
