create: brends block

--- a/home.html
+++ b/home.html
@@ -518,6 +518,11 @@
       <button class="home-title__button subscribe__button">Shop Now</button>
     </div>
   </section>
+  <section class="brends">
+    <div class="container brends__container">
+      <img src="imgs/main-brends.png" alt="Main brends" class="brends__img">
+    </div>
+  </section>
   <!-- swiper -->
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
