create: leatest-blog block

--- a/home.html
+++ b/home.html
@@ -464,7 +464,6 @@
     <div class="container top__container">
       <h3 class="top__title title">Top Categories</h3>
       <!-- Slider main container -->
-      <!-- Slider main container -->
       <div class="swiper">
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
@@ -523,6 +522,124 @@
       <img src="imgs/main-brends.png" alt="Main brends" class="brends__img">
     </div>
   </section>
+  <section class="leatest-blog">
+    <div class="container leatest-blog__container">
+      <h3 class="leatest-blog__title title">Leatest Blog</h3>
+      <div class="leatest-blog__cards">
+        <div class="leatest-blog__card">
+          <div class="leatest-blog__img">
+            <img src="/imgs/home-1.png" alt="">
+            <div class="leatest-blog__img-description">
+              <div class="leatest-blog__write">SaberAli</div>
+              <div class="leatest-blog__date">21 August,2020</div>
+            </div>
+          </div>
+          <div class="leatest-blog__description">
+            <div class="leatest-blog__name">Top esssential Trends in 2021</div>
+            <div class="leatest-blog__text">More off this less hello samlande lied much
+              over tightly circa horse taped mightly</div>
+            <a href="" class="leatest-blog__more">Read More</a>
+          </div>
+        </div>
+        <div class="leatest-blog__card">
+          <div class="leatest-blog__img">
+            <img src="/imgs/home-2.png" alt="">
+            <div class="leatest-blog__img-description">
+              <div class="leatest-blog__write">Surfauxion</div>
+              <div class="leatest-blog__date">21 August,2020</div>
+            </div>
+          </div>
+          <div class="leatest-blog__description">
+            <div class="leatest-blog__name leatest-blog__name--middle">Top esssential Trends in 2021</div>
+            <div class="leatest-blog__text">More off this less hello samlande lied much
+              over tightly circa horse taped mightly</div>
+            <a href="" class="leatest-blog__more leatest-blog__more--middle">Read More</a>
+          </div>
+        </div>
+        <div class="leatest-blog__card">
+          <div class="leatest-blog__img">
+            <img src="/imgs/home-3.png" alt="">
+            <div class="leatest-blog__img-description">
+              <div class="leatest-blog__write">SaberAli</div>
+              <div class="leatest-blog__date">21 August,2020</div>
+            </div>
+          </div>
+          <div class="leatest-blog__description">
+            <div class="leatest-blog__name">Top esssential Trends in 2021</div>
+            <div class="leatest-blog__text">More off this less hello samlande lied much
+              over tightly circa horse taped mightly</div>
+            <a href="" class="leatest-blog__more">Read More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="footer__left">
+        <span class="hekto">Hekto</span>
+        <form action="#" class="footer-form">
+          <input type="text" placeholder="Enter Email Address" class="footer-input" />
+          <input type="button" value="Sign Up" class="footer-button" />
+        </form>
+        <!-- /.footer-form -->
+        <span class="footer-contact">Contact Info</span>
+        <span class="footer-adress">17 Princess Road, London, Greater London NW1 8JR, UK</span>
+      </div>
+      <!-- /.footer__left -->
+      <div class="footer__right">
+        <ul class="footer-item">
+          <li class="footer-item__main">Catagories</li>
+          <li class="footer-item__li">Laptops & Computers</li>
+          <li class="footer-item__li">Cameras & Photography</li>
+          <li class="footer-item__li">Smart Phones & Tablets</li>
+          <li class="footer-item__li">Video Games & Consoles</li>
+          <li class="footer-item__li">Waterproof Headphones</li>
+        </ul>
+        <!-- ./footer-item -->
+        <ul class="footer-item">
+          <li class="footer-item__main">Customer Care</li>
+          <li class="footer-item__li">My Account</li>
+          <li class="footer-item__li">Discount</li>
+          <li class="footer-item__li">Returns</li>
+          <li class="footer-item__li">Orders History</li>
+          <li class="footer-item__li">Order Tracking</li>
+        </ul>
+        <!-- ./footer-item -->
+        <ul class="footer-item">
+          <li class="footer-item__main">Pages</li>
+          <li class="footer-item__li">Blog</li>
+          <li class="footer-item__li">Browse the Shop</li>
+          <li class="footer-item__li">Category</li>
+          <li class="footer-item__li">Pre-Built Pages</li>
+          <li class="footer-item__li">Visual Composer Elements</li>
+          <li class="footer-item__li">WooCommerce Pages</li>
+        </ul>
+        <!-- ./footer-item -->
+      </div>
+      <!-- /.footer__right -->
+    </div>
+    <!-- /.footer-container -->
+    <div class="footer-reserved">
+      <div class="footer-reserved__container">
+        <span class="reserved">©Webecy - All Rights Reserved</span>
+        <div class="footer-icons">
+          <a href="#" class="footer-icons__links"><img src="imgs/facebook-pic.svg" alt="Icon facebook"
+              class="facebook-pic" />
+          </a>
+          <a href="#" class="footer-icons__links"><img src="imgs/inst-pic.svg" alt="Icon instagram" class="inst-pic" />
+          </a>
+          <a href="#" class="footer-icons__links">
+            <img src="imgs/twitter-pic.svg" alt="Icon twitter" class="twit-pic" />
+          </a>
+        </div>
+        <!-- ./footer-icons -->
+      </div>
+      <!-- /.footer-reserved__container -->
+    </div>
+    <!-- /.footer-reserved -->
+  </footer>
+  <!-- /.footer -->
   <!-- swiper -->
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
