--- a/home.html
+++ b/home.html
@@ -73,11 +73,11 @@
                 <img src="/imgs/arrow-red.svg" alt="" class="arrow">
               </a>
             </li>
-            <li><a class="header-link">Pages</a></li>
-            <li><a class="header-link">Products</a></li>
-            <li><a class="header-link">Blog</a></li>
-            <li><a class="header-link">Shop</a></li>
-            <li><a class="header-link">Contact</a></li>
+            <li><a class="header-link" href="grid.html">Pages</a></li>
+            <li><a class="header-link" href="grid.html">Products</a></li>
+            <li><a class="header-link" href="grid.html">Blog</a></li>
+            <li><a class="header-link" href="grid.html">Shop</a></li>
+            <li><a class="header-link" href="grid.html">Contact</a></li>
           </ul>
         </div>
         <form action="#" class="search">
@@ -117,7 +117,7 @@
                 <img src="/imgs/chair-1.svg" alt="Chair" class="">
               </div>
               <div class="swiper-slide__description">
-                <h6 class="swiper-slide__title">Cantilever chair</h6>
+                <h6 class="swiper-slide__title"><a href="product.html">Cantilever chair</a></h6>
                 <div class="swiper-slide__colors">
                   <div class="swiper-slide__color swiper-slide__colors--green"></div>
                   <div class="swiper-slide__color swiper-slide__colors--pink"></div>
@@ -132,7 +132,7 @@
                 <img src="/imgs/chair-2.svg" alt="Chair" class="">
               </div>
               <div class="swiper-slide__description">
-                <h6 class="swiper-slide__title">Cantilever chair</h6>
+                <h6 class="swiper-slide__title"><a href="product.html">Cantilever chair</a></h6>
                 <div class="swiper-slide__colors">
                   <div class="swiper-slide__color swiper-slide__colors--green"></div>
                   <div class="swiper-slide__color swiper-slide__colors--pink"></div>
@@ -147,7 +147,7 @@
                 <img src="/imgs/chair-3.svg" alt="Chair" class="">
               </div>
               <div class="swiper-slide__description">
-                <h6 class="swiper-slide__title">Cantilever chair</h6>
+                <h6 class="swiper-slide__title"><a href="product.html">Cantilever chair</a></h6>
                 <div class="swiper-slide__colors">
                   <div class="swiper-slide__color swiper-slide__colors--green"></div>
                   <div class="swiper-slide__color swiper-slide__colors--pink"></div>
@@ -162,7 +162,7 @@
                 <img src="/imgs/chair-4.svg" alt="Chair" class="">
               </div>
               <div class="swiper-slide__description">
-                <h6 class="swiper-slide__title">Cantilever chair</h6>
+                <h6 class="swiper-slide__title"><a href="product.html">Cantilever chair</a></h6>
                 <div class="swiper-slide__colors">
                   <div class="swiper-slide__color swiper-slide__colors--green"></div>
                   <div class="swiper-slide__color swiper-slide__colors--pink"></div>
