Renamed from home.html to index.html

--- a/grid.html
+++ b/grid.html
@@ -71,13 +71,13 @@
       <div class="header-down">
         <div class="container header-down__container">
           <div class="header-down__left">
-            <a href="home.html">
+            <a href="index.html">
               <div class="header-logo">Hekto</div>
             </a>
 
             <ul class="navbar">
               <li>
-                <a class="header-link header-link__red" href="home.html">
+                <a class="header-link header-link__red" href="index.html">
                   Home
                   <img src="/imgs/arrow-red.svg" alt="" class="arrow" />
                 </a>
