--- a/product.html
+++ b/product.html
@@ -71,10 +71,10 @@
       <div class="header-down">
         <div class="container header-down__container">
           <div class="header-down__left">
-            <div class="header-logo"><a href="home.html">Hekto</a></div>
+            <div class="header-logo"><a href="index.html">Hekto</a></div>
             <ul class="navbar">
               <li>
-                <a class="header-link header-link__red" href="home.html">
+                <a class="header-link header-link__red" href="index.html">
                   Home
                   <img src="/imgs/arrow-red.svg" alt="" class="arrow" />
                 </a>
