create: hetmap module
initialization

--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body id="heatmapContainer">
   <header class="header">
     <div class="header-up">
       <div class="container header-up__container">
@@ -643,6 +643,8 @@
   <!-- swiper -->
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
+  <script src="node_modules/heatmap.js/build/heatmap.js"></script>
+  <script src="js/heatmap-object.js"></script>
 </body>
 
 </html>
