--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>heat-map-test</title>
+  <!-- Стиль анимационного эффекта -->
+  <link rel="stylesheet" href="https://www.patrick-wied.at/static/heatmapjs/assets/css/commons.css">
+  <link rel="stylesheet" href="https://www.patrick-wied.at/static/heatmapjs/assets/css/example-commons.css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <link href="css/style.css.map" rel="stylesheet" type="text/css">
   <!-- swiper -->
@@ -15,7 +18,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 
-<body id="heatmapContainer">
+<body class="heatmap" id="heatmap">
   <header class="header">
     <div class="header-up">
       <div class="container header-up__container">
